# UIProject

./: .gitmodules  CMakeLists.txt  UIProject.cpp  UIProject.h  main.cpp
Error/: Error.cpp  Error.h  MyLogger.cpp
Integer/: Integer.cpp  Integer.h
Rational/: Rational.cpp  Rational.h
Real/: Real.cpp  Real.h
Vector/: IVector.cpp  VectorImpl.cpp
app/: CMakeLists.txt
src/: CMakeLists.txt
src/Models/: CMakeLists.txt  Error.cpp  Integer.cpp  Rational.cpp  Real.cpp
src/Models/include/models/: Error.h
src/Numeric/: CMakeLists.txt
src/Numeric/Set/: ISet.cpp  SetImpl.cpp
test/: CMakeLists.txt  Test.h  leaktest.h  settests.cpp  settests.h  tests.cpp  vectortests.cpp  vectortests.h
